Change the algorithm used to darken text when printing a tad to produce better results.  Bug 141232, r/sr=roc+moz