layout/html/style/src/nsCSSRendering.cpp
@@ -1400,9 +1400,14 @@ nscolor   newcolor;
   if (PR_TRUE == aNoBackGround){
     // convert the RBG to HSV so we can get the lightness (which is the v)
     NS_RGB2HSV(newcolor,hue,sat,value);
-    // if the value is lighter than 192, bring it back down.
-    if(value > 192) {
-      value = 192;
+    // The goal here is to send white to black while letting colored
+    // stuff stay colored... So we adopt the following approach.
+    // Something with sat = 0 should end up with value = 0.  Something
+    // with a high sat can end up with a high value and it's ok.... At
+    // the same time, we don't want to make things lighter.  Do
+    // something simple, since it seems to work.
+    if (value > sat) {
+      value = sat;
       // convert this color back into the RGB color space.
       NS_HSV2RGB(newcolor,hue,sat,value);
     }
